# MMI-Graph-Library

./: .travis.yml  CMakeLists.txt  Laufzeiten.ods  README.md
graph/: Fluss.graphml  Fluss.txt  Fluss2.graphml  Fluss2.txt  Fluss3.txt  G_10_20.txt  G_10_200.txt  G_1_2.txt  G_1_20.txt  G_1_200.txt  Graph1.graphml  Graph1.txt  Graph2.graphml  Graph2.txt  Graph3.txt  Graph4.txt  K_10.txt  K_100.txt  K_10e.txt  K_12.txt  K_12e.txt  K_15.txt  K_15e.txt  K_20.txt  K_30.txt  K_50.txt  K_70.txt  Kostenminimal1.txt  Kostenminimal2.txt  Kostenminimal3.graphml  Kostenminimal3.txt  Kostenminimal4.txt  Kostenminimal6.txt  Matching2_100_100.txt  Matching_100_100.txt  Wege1.txt  Wege2.txt  Wege3.txt  wege1.graphml  wege2.graphml  (+1 more)
include/: comparer.h  edge.h  graph.h  graph_algorithm.h  graph_comparer.h  graph_edge.h  graph_edge_with_cost_capacity.h  graph_files.h  graph_iterator.h  graph_loader.h  graph_vertex.h  graph_vertex_with_balance.h  practical_training.h  vertex.h
src/: graph.cpp  graph_algorithm.cpp  graph_comparer.cpp  graph_edge.cpp  graph_edge_with_cost_capacity.cpp  graph_iterator.cpp  graph_loader.cpp  graph_vertex.cpp  graph_vertex_with_balance.cpp  main.cpp  practical_training.cpp
test/: graph_test.cpp  minimum_cost_flow_test.cpp  shortest_path_test.cpp  test.cpp
